[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"]}
reqwest = "0.11.14"
async-trait = "0.1.64"
scraper = "0.15.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
